<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EduLauncher</string>
    <string name="title_control">学习助手启动器</string>
    <string name="btn_start">启动系统</string>
    <string name="btn_stop">关闭系统</string>
    <string name="btn_homework">作业辅导</string>
    <string name="btn_posture">坐姿管理</string>
    <string name="btn_archive">档案查看</string>
    <string name="btn_usb">U盘拷贝</string>
    <string name="btn_report_push">报告推送</string>
    <string name="btn_settings">设置</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="msg_password_error">密码错误</string>
    <string name="msg_doubao_not_installed">未安装豆包APP，请先安装</string>
    <string name="msg_posture_not_installed">未安装坐姿管理程序，请先安装</string>
    <string name="msg_archive_not_found">未找到学生档案，请先创建</string>
    <string name="msg_usb_inserted">检测到U盘插入</string>
    <string name="msg_copy_success">拷贝成功</string>
    <string name="msg_copy_failed">拷贝失败</string>
    <string name="title_archive_view">学生档案</string>
    <string name="title_basic_info">基础信息</string>
    <string name="title_subject_info">学科信息</string>
    <string name="title_learning_records">学习记录</string>
    <string name="title_posture_records">坐姿记录</string>
    <string name="tab_basic">基础</string>
    <string name="tab_subject">学科</string>
    <string name="tab_learning">学习</string>
    <string name="tab_posture">坐姿</string>
    <string name="label_name">姓名</string>
    <string name="label_grade">年级</string>
    <string name="label_stage">学段</string>
    <string name="label_term">学期</string>
    <string name="label_subject_status">学科状态</string>
    <string name="label_weak_points">薄弱知识点</string>
    <string name="label_textbook">教材信息</string>
    <string name="label_personality">性格评估</string>
    <string name="label_parent_pref">家长偏好</string>
    <string name="msg_no_permission">没有权限访问该功能</string>
    <string name="msg_system_running">系统运行中...</string>
    <string name="msg_system_stopped">系统已停止</string>
</resources>